Fixed some spacing

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -48,7 +48,8 @@
         grid-row: 1 / 3;
         order: -5;
         height: auto;
-        justify-self: unset;
+        max-height: none;
+        max-width: none;
     }
 
     .heroText {
