--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -62,6 +62,8 @@
         grid-column: 1 / 4;
         order: -3;
         text-align: center;
+        width: auto;
+        height: auto;
     }
 
     .joinButtonWrapper {
