--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -230,6 +230,11 @@ nav ul.open {display: block; order: 1;}
     box-shadow: 0px 0px 10px black;
 }
 
+.eventSection {
+    width: auto;
+    height: auto;
+}
+
 .eventSection h2 {
     color: #ADD8E6;
     margin: 5px;
@@ -323,6 +328,11 @@ nav ul.open {display: block; order: 1;}
 
 .joinSection {
     display: none;
+}
+
+.newsSection {
+    width: auto;
+    height: auto;
 }
 
 .newsTitle {
